# amicleaner.rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.sh
src/: main.rs
