[package]
name = "amicleaner"
version = "2.0.0"
authors = ["Joseph Kordish <joe@unicornclouds.com"]
edition = "2024"
readme = "README.md"
license = "The MIT License (MIT)"
autobins = false

[[bin]]
name = "amicleaner"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1" }
aws-types = { version = "1"}
chrono = { version = "0.4" }
clap = { version = "3" }
console = { version = "0.16" }
hashbrown = { version = "0.15" }
indicatif = { version = "0.18.0" }
log = { version = "0.4" }
prettytable-rs = { version = "0.10" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
simple_logger = { version = "5", default-features = false }
tokio = { version = "1", default_features = false, features = ["full"] }
tokio-stream = { version = "0.1" }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"         # larger binaries but better optimized
opt-level = 3
strip = "debuginfo"

[profile.release.package."*"]
codegen-units = 1
incremental = false
opt-level = 3
strip = "debuginfo"
